# rCSFs

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  README.zh-CN.md  USAGE.md  pixi.toml  pyproject.toml  test_rust_vs_python.py
docs/: CHANGELOG.md  CODE_REVIEW.md  CODE_REVIEW_1.2.1-beta2.md  CODE_REVIEW_1.2.2-beta1.md  CSF_DESCRIPTOR_GUIDE.md  DESCRIPTOR_STREAMING_FAST_PATH_PLAN.md  FIX_SUMMARY_2025-01-13.md  RUST_CODE_REVIEW_2026-04-27.md  csfs_descriptor_parallel_review.md  flow_diagrams.md  normalization_analysis.md
examples/: descriptor_usage.py
python/csfs_loader/: __init__.py  _csfs_loader.pyi
python/rcsfs/: __init__.py  _rcsfs.pyi
rcsfs/: __init__.py  _rcsfs.pyi
scripts/: compare_descriptor_outputs.py
src/: csfs_conversion.rs  csfs_descriptor.rs  descriptor_normalization.rs  lib.rs  main.rs
tests/: csfs_descriptor_test.rs  descriptor_normalization_test.rs  integration_test.rs  rcsfs_test.py
