[package]
name = "rCSFs"
version = "0.1.0"
edition = "2024"
license = "MIT"

[features]
default = ["python"]
python = ["dep:pyo3"]
polars = ["dep:polars"]

[dependencies]
arrow = "57.1.0"
parquet = "57.1.0"
pyo3 = { version = "0.27.2", optional = true }
toml = "0.9.8"
serde = { version = "1.0.215", features = ["derive"] }
crossbeam-channel = "0.5.13"
num_cpus = "1.16.0"
anyhow = "1.0.100"
rayon = "1.10"
polars = { version = "0.46", features = ["parquet", "lazy"], optional = true }

[lib]
name = "_rcsfs"
crate-type = ["cdylib", "rlib", "staticlib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
