[package]
name = "rCSFs"

version = "1.2.2-beta.1"

edition = "2024"
license = "MIT"
description = "Rust-powered Python library for converting atomic-physics CSF data to Parquet and generating ML-ready descriptors"

[features]
default = ["python"]
python = ["dep:pyo3"]

[dependencies]
arrow = "58.0.0"
parquet = "58.0.0"
pyo3 = { version = "0.28.2", optional = true }
toml = "0.9.8"
serde = { version = "1.0.215", features = ["derive"] }
crossbeam-channel = "0.5.13"
num_cpus = "1.16.0"
anyhow = "1.0.100"
rayon = "1.10"

[lib]
name = "_rcsfs"
crate-type = ["cdylib", "rlib", "staticlib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
