[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rcsfs"
description = "High-performance CSF to Parquet conversion library"
requires-python = ">=3.13,<3.14"
authors = [
    {name = "YenochQin", email = "yenochqin@hotmail.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet",
]
dynamic = ["license", "readme", "version"]

[dependency-groups]
dev = [
    "maturin>=1.7.8",
    "pytest>=9.0.2",
    "pytest-pretty>=1.2.0",
    "pytest-speed>=0.3.5",
]
lint = [
    "mypy>=1.13.0",
    "ruff>=0.8.2",
]

[tool.maturin]
python-source = "python"
module-name = "rcsfs._rcsfs"
features = ["pyo3/extension-module", "pyo3/generate-import-lib"]

[[tool.uv.index]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"

[tool.pixi.workspace]
channels = ["https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud/conda-forge"]
platforms = ["win-64", "linux-64"]

[tool.pixi.pypi-dependencies]
rcsfs = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
lint = { features = ["lint"], solve-group = "default" }

[tool.pixi.tasks]
